added missing tours

--- a/faq.html
+++ b/faq.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>TourX Pro - Travels Tourism Agency HTML Template</title>
+    <title>Tuktuk Tour</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -297,7 +297,7 @@
                                     <i class="fl flaticon-plus">+</i>
                                     <ul class="sub-menu">
                                         <li><a href="index.html">Home Style 1</a></li>
-                                        <li><a href="index2.html">Home Style 2</a></li>
+                                        <li><a href="index.html">Home Style 2</a></li>
                                         <li><a href="index3.html">Home Style 3</a></li>
                                         <li><a href="index4.html">Home Style 4</a></li>
 
