--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>TourX Pro - Travels Tourism Agency HTML Template</title>
+    <title>Tuktuk Tour</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -76,7 +76,7 @@
                     <div class="col-xl-2 col-lg-12 col-md-12 col-sm-12 col-xs-12 align-items-center d-xl-flex d-lg-block">
                         <div class="nav-logo d-flex justify-content-between align-items-center">
 
-                            <h3 class="header-title"><a  class="header-title" href="index2.html">Tuktuk Tour</a></h3>
+                            <h3 class="header-title"><a  class="header-title" href="index.html">Tuktuk Tour</a></h3>
 
                             <div class="d-flex align-items-center gap-4">
                                 <div class="nav-right d-xl-none">
@@ -104,13 +104,13 @@
                                     <a href="javascript:void(0)">Tours</a>
                                     <i class="fl flaticon-plus">+</i>
                                     <ul class="sub-menu">
-                                        <li><a href="package-details.html">Welcome to Madrid</a></li>
-                                        <li><a href="package-details.html">Historical</a></li>
-                                        <li><a href="package-details.html">Complete</a></li>
-                                        <li><a href="package-details.html">Wonders of Madrid </a></li>
+                                        <li><a href="package-details-1.html">Welcome to Madrid</a></li>
+                                        <li><a href="package-details-2.html">Historical</a></li>
+                                        <li><a href="package-details-3.html">Complete</a></li>
+                                        <li><a href="package-details-4.html">Wonders of Madrid </a></li>
                                     </ul>
                                 </li>
-                                <li class="has-child-menu">
+                                <!-- <li class="has-child-menu">
                                     <a href="javascript:void(0)">Info</a>
                                     <i class="fl flaticon-plus">+</i>
                                     <ul class="sub-menu">
@@ -119,7 +119,7 @@
                                         <li><a href="blog-standard.html">Blog Standard </a></li>
                                         <li><a href="blog-details.html">Blog Details</a></li>
                                     </ul>
-                                </li>
+                                </li> -->
                                 <li><a href="contact.html">Contact Us</a></li>
                             </ul>
 
@@ -152,8 +152,8 @@
                                     From its humble beginnings as a Muslim fortress to its transformation into a thriving metropolis, Madrid's story is
                                      woven into its impressive landmarks and vibrant atmosphere.</p>
                                     <div class="hero-btns">
-                                        <a href="package.html" class="button-fill-primary">Take Tour</a>
-                                        <a href="package.html" class="button-outlined-primary">Check all tours</a>
+                                        <a href="package-details-1.html" class="button-fill-primary">Take Tour</a>
+                                        <a href="#tour-packages" class="button-outlined-primary">Check all tours</a>
                                     </div>
                                </div>
                             </div>
@@ -177,7 +177,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-8">
-                    <div class="section-head-alpha">
+                    <div id="tour-packages" class="section-head-alpha">
                         <h2>Tour Packages</h2>
                         <p>Take into account the duration and itinerary of each tour. Some tours may be a few hours long, while others may span half a day or even a full day. Review the planned stops and attractions covered in each tour to see if they align with your expectations.</p>
                     </div>
@@ -213,18 +213,18 @@
                 <div class="col-lg-4 col-md-6 ">
                     <div class="package-card-alpha">
                         <div class="package-thumb">
-                            <a href="package-details.html"><img src="assets/images/package/tour-madrid-thumbnail-2.jpeg" alt=""></a>
+                            <a href="package-details-2.html"><img src="assets/images/package/tour-madrid-thumbnail-2.jpeg" alt=""></a>
                             <p class="card-lavel">
                                 <i class="bi bi-clock"></i> <span>90 min</span>
                             </p>
                         </div>
                         <div class="package-card-body">
-                            <h3 class="p-card-title"><a href="package-details.html">A history trip through the oldest
+                            <h3 class="p-card-title"><a href="package-details-2.html">A history trip through the oldest
                                 buildings and streets in Madrid
                             </a></h3>
                             <div class="p-card-bottom">
                                 <div class="book-btn">
-                                    <a href="package-details.html">Book Now <i class='bx bxs-right-arrow-alt'></i></a>
+                                    <a href="package-details-2.html">Book Now <i class='bx bxs-right-arrow-alt'></i></a>
                                 </div>
 
                                 <div class="p-card-info">
@@ -238,21 +238,21 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="package-card-alpha">
                         <div class="package-thumb">
-                            <a href="package-details.html"><img src="assets/images/package/tour-madrid-thumbnail-3.jpeg" alt=""></a>
+                            <a href="package-details-3.html"><img src="assets/images/package/tour-madrid-thumbnail-3.jpeg" alt=""></a>
                             <p class="card-lavel">
                                 <i class="bi bi-clock"></i> <span>120 min</span>
                             </p>
                         </div>
                         <div class="package-card-body">
-                            <h3 class="p-card-title"><a href="package-details.html">A comprehensive Madrid neighborhood tour, exploring all the vibrant districts</a></h3>
+                            <h3 class="p-card-title"><a href="package-details-3.html">A comprehensive Madrid neighborhood tour, exploring all the vibrant districts</a></h3>
                             <div class="p-card-bottom">
                                 <div class="book-btn">
-                                    <a href="package-details.html">Book Now <i class='bx bxs-right-arrow-alt'></i></a>
+                                    <a href="package-details-3.html">Book Now <i class='bx bxs-right-arrow-alt'></i></a>
                                 </div>
 
                                 <div class="p-card-info">
                                     <span>From</span>
-                                    <h6>149.00 €<span>Per Group</span></h6>
+                                    <h6>149.00 € <span>Per Group</span></h6>
                                 </div>
                             </div>
                         </div>
@@ -261,17 +261,17 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="package-card-alpha">
                         <div class="package-thumb">
-                            <a href="package-details.html"><img src="assets/images/package/tour-madrid-thumbnail-4.jpeg" alt=""></a>
+                            <a href="package-details-4.html"><img src="assets/images/package/tour-madrid-thumbnail-4.jpeg" alt=""></a>
                             <p class="card-lavel">
                                 <i class="bi bi-clock"></i> <span>180 min</span>
                             </p>
                         </div>
                         <div class="package-card-body">
-                            <h3 class="p-card-title"><a href="package-details.html">Uncover the hidden wonders and treasures of Madrid's streets
+                            <h3 class="p-card-title"><a href="package-details-4.html">Uncover the hidden wonders and treasures of Madrid's streets
                             </a></h3>
                             <div class="p-card-bottom">
                                 <div class="book-btn">
-                                    <a href="package-details.html">Book Now <i class='bx bxs-right-arrow-alt'></i></a>
+                                    <a href="package-details-4.html">Book Now <i class='bx bxs-right-arrow-alt'></i></a>
                                 </div>
 
                                 <div class="p-card-info">
@@ -515,86 +515,6 @@
     </div>
     <!-- =============== Guide area end =============== -->
 
-    <!-- =============== Blog area start =============== -->
-    <!-- <div class="blog-area blog-style-one pt-110  ">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <div class="section-head-alpha text-center mx-auto">
-                        <h2>Latest News</h2>
-                        <p>Duis rutrum nisl urna. Maecenas vel libero faucibus nisi venenatis hendrerit a id lectus. Suspendissendt
-                            blandit interdum. Sed pellentesque at nunc eget consectetur.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog-card-alpha">
-                        <div class="blog-thumb">
-                            <a href="blog-details.html">
-                                <img src="assets/images/blog/blog-md-1.png" alt="">
-                            </a>
-
-                            <div class="blog-lavel">
-                                <a href="#"><i class="bi bi-calendar3"></i> Novembar 16, 2021</a>
-                            </div>
-                        </div>
-                        <div class="blog-content">
-                            <div class="blog-body-top">
-                                <a href="#" class="blog-writer"><i class="bi bi-person-circle"></i> By John Smith </a>
-                                <a href="#" class="blog-comments"><i class="bi bi-chat-dots-fill"></i> Comment (08)</a>
-                            </div>
-                            <h4 class="blog-title"><a href="blog-details.html">Mauris commodo massa vel diamnat
-                                feugiat sagittis Nunc maxim.</a></h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog-card-alpha">
-                        <div class="blog-thumb">
-                            <a href="blog-details.html">
-                                <img src="assets/images/blog/blog-md-2.png" alt="">
-                            </a>
-
-                            <div class="blog-lavel">
-                                <a href="#"><i class="bi bi-calendar3"></i> Novembar 16, 2021</a>
-                            </div>
-                        </div>
-                        <div class="blog-content">
-                            <div class="blog-body-top">
-                                <a href="#" class="blog-writer"><i class="bi bi-person-circle"></i> By John Smith </a>
-                                <a href="#" class="blog-comments"><i class="bi bi-chat-dots-fill"></i> Comment (08)</a>
-                            </div>
-                            <h4 class="blog-title"><a href="blog-details.html">In tristique ultrices odio quis gravida. Pellentesque euismod.</a></h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog-card-alpha">
-                        <div class="blog-thumb">
-                            <a href="blog-details.html">
-                                <img src="assets/images/blog/blog-md-3.png" alt="">
-                            </a>
-
-                            <div class="blog-lavel">
-                                <a href="#"><i class="bi bi-calendar3"></i> Novembar 16, 2021</a>
-                            </div>
-                        </div>
-                        <div class="blog-content">
-                            <div class="blog-body-top">
-                                <a href="#" class="blog-writer"><i class="bi bi-person-circle"></i> By John Smith </a>
-                                <a href="#" class="blog-comments"><i class="bi bi-chat-dots-fill"></i> Comment (08)</a>
-                            </div>
-                            <h4 class="blog-title"><a href="blog-details.html">consequat lacus libero et leo  Viva ac sapien dui ultrices bibendum.</a></h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-    <!-- =============== Blog area end =============== -->
-
     <!-- =============== Footer area start =============== -->
     <div class="footer-area mt-110">
         <div class="footer-main-wrapper">
@@ -622,29 +542,10 @@
 
                     <div class="col-lg-2 col-md-4">
                         <div class="footer-widget">
-                            <h4 class="footer-widget-title">Quick Link</h4>
-
-                            <ul class="footer-links">
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="package.html">Tour Package</a></li>
-                                <li><a href="destination.html">Destination</a></li>
-                                <li><a href="guide.html">Tour Guide</a></li>
-                                <li><a href="package-details.html">Booking Process</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                            </ul>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-4">
                         <div class="footer-widget">
-                            <h4 class="footer-widget-title">Tour Type</h4>
-
-                            <ul class="footer-links">
-                                <li><a href="#">Wild & Adventure Tours</a></li>
-                                <li><a href="#">Group Tour</a></li>
-                                <li><a href="#">Seasonal Tours</a></li>
-                                <li><a href="#">Relaxation Tours</a></li>
-                                <li><a href="#">Family Friendly Tours</a></li>
-                            </ul>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-8">
@@ -681,7 +582,6 @@
                     <ul class="footer-contact-list">
                         <li><i class="bi bi-telephone-x"></i> <a href="tel:+34642619622">+34 642-619-622</a></li>
                         <li><i class="bi bi-envelope-open"></i> <a href="mailto:tuktuktourmadrid@gmail.com">tuktuktourmadrid@gmail.com</a></li>
-                        <li><i class="bi bi-geo-alt"></i> <a href="#">2752 Willison Street Eagan, United State</a></li>
                     </ul>
                 </div>
             </div>
