--- a/package-details-1.html
+++ b/package-details-1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>TourX Pro - Travels Tourism Agency HTML Template</title>
+    <title>Tuktuk Tour</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -76,7 +76,7 @@
                     <div class="col-xl-2 col-lg-12 col-md-12 col-sm-12 col-xs-12 align-items-center d-xl-flex d-lg-block">
                         <div class="nav-logo d-flex justify-content-between align-items-center">
 
-                            <h3 class="header-title"><a  class="header-title" href="index2.html">Tuktuk Tour</a></h3>
+                            <h3 class="header-title"><a  class="header-title" href="index.html">Tuktuk Tour</a></h3>
 
                             <div class="d-flex align-items-center gap-4">
                                 <div class="nav-right d-xl-none">
@@ -104,13 +104,13 @@
                                     <a href="javascript:void(0)">Tours</a>
                                     <i class="fl flaticon-plus">+</i>
                                     <ul class="sub-menu">
-                                        <li><a href="package-details.html">Welcome to Madrid</a></li>
-                                        <li><a href="package-details.html">Historical</a></li>
-                                        <li><a href="package-details.html">Complete</a></li>
-                                        <li><a href="package-details.html">Wonders of Madrid </a></li>
+                                        <li><a href="package-details-1.html">Welcome to Madrid</a></li>
+                                        <li><a href="package-details-2.html">Historical</a></li>
+                                        <li><a href="package-details-3.html">Complete</a></li>
+                                        <li><a href="package-details-4.html">Wonders of Madrid </a></li>
                                     </ul>
                                 </li>
-                                <li class="has-child-menu">
+                                <!-- <li class="has-child-menu">
                                     <a href="javascript:void(0)">Info</a>
                                     <i class="fl flaticon-plus">+</i>
                                     <ul class="sub-menu">
@@ -119,7 +119,7 @@
                                         <li><a href="blog-standard.html">Blog Standard </a></li>
                                         <li><a href="blog-details.html">Blog Details</a></li>
                                     </ul>
-                                </li>
+                                </li> -->
                                 <li><a href="contact.html">Contact Us</a></li>
                             </ul>
 
@@ -233,9 +233,9 @@
                             <li class="nav-item" role="presentation">
                               <button class="nav-link" id="pills-package2" data-bs-toggle="pill" data-bs-target="#pill-body2" type="button" role="tab" aria-controls="pill-body2" aria-selected="false"> <i class="bi bi-file-earmark-spreadsheet"></i>Itinerary</button>
                             </li>
-                            <li class="nav-item" role="presentation">
-                              <button class="nav-link" id="pills-package3" data-bs-toggle="pill" data-bs-target="#pill-body3" type="button" role="tab" aria-controls="pill-body3" aria-selected="false"><i class="bi bi-images"></i> Tour Gallary</button>
-                            </li>
+                            <!-- <li class="nav-item" role="presentation">
+                              <button class="nav-link" id="pills-package3" data-bs-toggle="pill" data-bs-target="#pill-body3" type="button" role="tab" aria-controls="pill-body3" aria-selected="false"><i class="bi bi-images"></i> Tour Gallery</button>
+                            </li> -->
                             <li class="nav-item" role="presentation">
                               <button class="nav-link" id="pills-package4" data-bs-toggle="pill" data-bs-target="#pill-body4" type="button" role="tab" aria-controls="pill-body4" aria-selected="false"><i class="bi bi-geo-alt"></i> Location</button>
                             </li>
@@ -486,29 +486,10 @@
 
                     <div class="col-lg-2 col-md-4">
                         <div class="footer-widget">
-                            <h4 class="footer-widget-title">Quick Link</h4>
-
-                            <ul class="footer-links">
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="package.html">Tour Package</a></li>
-                                <li><a href="destination.html">Destination</a></li>
-                                <li><a href="guide.html">Tour Guide</a></li>
-                                <li><a href="package-details.html">Booking Process</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                            </ul>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-4">
                         <div class="footer-widget">
-                            <h4 class="footer-widget-title">Tour Type</h4>
-
-                            <ul class="footer-links">
-                                <li><a href="#">Wild & Adventure Tours</a></li>
-                                <li><a href="#">Group Tour</a></li>
-                                <li><a href="#">Seasonal Tours</a></li>
-                                <li><a href="#">Relaxation Tours</a></li>
-                                <li><a href="#">Family Friendly Tours</a></li>
-                            </ul>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-8">
@@ -517,22 +498,22 @@
 
                             <div class="footer-gallary-grid">
                                 <div class="footer-gallary-item">
-                                    <a href="assets/images/gallary/fg-1.png"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-1.png" alt=""></a>
+                                    <a href="assets/images/gallary/fg-1.jpeg"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-1.jpeg" alt=""></a>
                                 </div>
                                 <div class="footer-gallary-item">
-                                    <a href="assets/images/gallary/fg-2.png"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-2.png" alt=""></a>
+                                    <a href="assets/images/gallary/fg-2.jpeg"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-2.jpeg" alt=""></a>
                                 </div>
                                 <div class="footer-gallary-item">
-                                    <a href="assets/images/gallary/fg-3.png"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-3.png" alt=""></a>
+                                    <a href="assets/images/gallary/fg-3.jpeg"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-3.jpeg" alt=""></a>
                                 </div>
                                 <div class="footer-gallary-item">
-                                    <a href="assets/images/gallary/fg-4.png"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-4.png" alt=""></a>
+                                    <a href="assets/images/gallary/fg-4.jpeg"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-4.jpeg" alt=""></a>
                                 </div>
                                 <div class="footer-gallary-item">
-                                    <a href="assets/images/gallary/fg-5.png"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-5.png" alt=""></a>
+                                    <a href="assets/images/gallary/fg-5.jpeg"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-5.jpeg" alt=""></a>
                                 </div>
                                 <div class="footer-gallary-item">
-                                    <a href="assets/images/gallary/fg-6.png"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-6.png" alt=""></a>
+                                    <a href="assets/images/gallary/fg-6.jpeg"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-6.jpeg" alt=""></a>
                                 </div>
                             </div>
                         </div>
@@ -545,7 +526,6 @@
                     <ul class="footer-contact-list">
                         <li><i class="bi bi-telephone-x"></i> <a href="tel:+34642619622">+34 642-619-622</a></li>
                         <li><i class="bi bi-envelope-open"></i> <a href="mailto:tuktuktourmadrid@gmail.com">tuktuktourmadrid@gmail.com</a></li>
-                        <li><i class="bi bi-geo-alt"></i> <a href="#">2752 Willison Street Eagan, United State</a></li>
                     </ul>
                 </div>
             </div>
