--- a/package-details-1.html
+++ b/package-details-1.html
@@ -494,14 +494,11 @@
                     </div>
                     <div class="col-lg-4 col-md-8">
                         <div class="footer-widget">
-                            <h4 class="footer-widget-title text-center">Gallery</h4>
+                            <h4 class="footer-widget-title">Gallery</h4>
 
                             <div class="footer-gallary-grid">
                                 <div class="footer-gallary-item">
                                     <a href="assets/images/gallary/fg-1.jpeg"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-1.jpeg" alt=""></a>
-                                </div>
-                                <div class="footer-gallary-item">
-                                    <a href="assets/images/gallary/fg-2.jpeg"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-2.jpeg" alt=""></a>
                                 </div>
                                 <div class="footer-gallary-item">
                                     <a href="assets/images/gallary/fg-3.jpeg"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-3.jpeg" alt=""></a>
@@ -511,9 +508,6 @@
                                 </div>
                                 <div class="footer-gallary-item">
                                     <a href="assets/images/gallary/fg-5.jpeg"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-5.jpeg" alt=""></a>
-                                </div>
-                                <div class="footer-gallary-item">
-                                    <a href="assets/images/gallary/fg-6.jpeg"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-6.jpeg" alt=""></a>
                                 </div>
                             </div>
                         </div>
